add genres api
