# cmd/api/routes.go
@@ -17,9 +17,17 @@ func (app *application) routes() http.Handler {
 	router.HandlerFunc(http.MethodGet, "/docs/*filepath", httpSwagger.WrapHandler)
 	router.HandlerFunc(http.MethodGet, "/v1/healthcheck", app.healthcheckHandler)
 
+	router.HandlerFunc(http.MethodPost, "/v1/genres/create", app.requirePermission("genres:write", app.createGenreHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/genres/movie/:id", app.requirePermission("genres:read", app.getMovieGenresHandler))
+	router.HandlerFunc(http.MethodPut, "/v1/genres/update/movie/:id", app.requirePermission("genres:write", app.replaceMovieGenresHandler))
+	router.HandlerFunc(http.MethodPatch, "/v1/genres/attach/:id", app.requirePermission("genres:write", app.addGenresToMovieHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/genres", app.requirePermission("genres:read", app.getAllGenresHandler))
+	router.HandlerFunc(http.MethodGet, "/v1/genres/get/:id", app.requirePermission("genres:read", app.showGenreHandler))
+	router.HandlerFunc(http.MethodPatch, "/v1/genres/update/:id", app.requirePermission("genres:write", app.updateGenreHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/genres/delete/:id", app.requirePermission("genres:write", app.deleteGenreHandler))
+
 	router.HandlerFunc(http.MethodPost, "/v1/movies", app.requirePermission("movies:read", app.createMovieHandler))
 	router.HandlerFunc(http.MethodGet, "/v1/movies", app.requirePermission("movies:write", app.listMoviesHandler))
-	// router.HandlerFunc(http.MethodGet, "/v1/movies/genres", app.requirePermission("movies:read", app.listGenresHandler))
 	router.HandlerFunc(http.MethodGet, "/v1/movies/:id", app.requirePermission("movies:read", app.showMovieHandler))
 	router.HandlerFunc(http.MethodPatch, "/v1/movies/:id", app.requirePermission("movies:write", app.updateMovieHandler))
 	router.HandlerFunc(http.MethodDelete, "/v1/movies/:id", app.requirePermission("movies:write", app.deleteMovieHandler))
